--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-02-18 Jens Dagerbo <jens.dagerbo@swipnet.se>
+    * Added function lookup to QuickOpen plugin. Patch by Ahn, Duk J.
+
 2004-02-15 Amilcar Lucas <a.lucas@tu-bs.de>
     * Updated support for Doxygen 1.3.6
 
