--- a/doc/kdevelop/index.docbook
+++ b/doc/kdevelop/index.docbook
@@ -80,7 +80,9 @@ Entries which require special treatment are marked with comments starting with '
     <year>2004</year>
     <holder>Bernd Pol</holder>
   </copyright>
-
+  
+  <!--ROLES_OF_TRANSLATORS-->
+  
   <legalnotice>&FDLNotice;</legalnotice>
 
   <abstract>
@@ -5841,6 +5843,8 @@ Other tools will be discussed in the chapter <xref linkend="plugin-tools"/>.
 </para>
 
 </sect1> <!-- credits-contributions -->
+
+<!--CREDITS_FOR_TRANSLATORS-->
 
 </chapter> <!-- credits -->
 
