Small change to the authorinfo to make it valid for the 4.1.2 DTD (personname is 4.2 only, and completely empty elements break in translation) CCMAIL:bernd.pol@online.de

--- a/doc/kdevelop/unixdev.docbook
+++ b/doc/kdevelop/unixdev.docbook
@@ -2,7 +2,7 @@
 
 <chapterinfo>
   <authorgroup>
-    <author><personname><firstname></firstname></personname></author>
+    <author><firstname>Bernd</firstname><surname>Pol</surname></author>
     <!-- ROLES_OF_TRANSLATORS -->
   </authorgroup>
 </chapterinfo>
