--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-01-26 Alexander Dymo <cloudtemple@mksat.net>
+    * Added Opie application templates for C++/Embedded development. Templates by Holger Freyther.
+
 2004-02-19 jbb <jbb@kdevelop.org>
     * Robert Gruber's patch
         - fix printing member variable when a /x modifier is added
