--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-2004-01-26 Alexander Dymo <cloudtemple@mksat.net>
+2004-02-24 Jens Dagerbo <jens.dagerbo@swipnet.se>
+    * Added FileList plugin
+
+2004-02-23 Alexander Dymo <cloudtemple@mksat.net>
     * Added Opie application templates for C++/Embedded development. Templates by Holger Freyther.
 
 2004-02-19 jbb <jbb@kdevelop.org>
